tests/fixtures/invalid/bool_add_none.py
# Cannot add Bool and None
x: bool = True + None
